// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`examples > 001-hello-world.bas 1`] = `
{
  "exitCode": 0,
  "stderr": "",
  "stdout": "hello world
goodbye world
",
}
`;

exports[`examples > 002-invalid-line-number.bas 1`] = `
{
  "exitCode": 70,
  "stderr": "/home/josh/matanuska/examples/002-invalid-line-number.bas:<R3>:0 (after line 20): error: Expected line number
  "foo"
  ^
",
  "stdout": "",
}
`;

exports[`examples > 003-logical.bas 1`] = `
{
  "exitCode": 0,
  "stderr": "",
  "stdout": "false
true
",
}
`;

exports[`examples > 004-if.bas 1`] = `
{
  "exitCode": 0,
  "stderr": "",
  "stdout": "1 + 1 is 2!
1 + 1 remains equal to 2!
still 2!
",
}
`;

exports[`examples > 005-if-else.bas 1`] = `
{
  "exitCode": 0,
  "stderr": "",
  "stdout": "else if
",
}
`;

exports[`examples > 006-open-block.bas 1`] = `
{
  "exitCode": 0,
  "stderr": "/home/josh/matanuska/examples/006-open-block.bas:40:4: error: else has not been closed
  40  else
      ^
",
  "stdout": "",
}
`;

exports[`examples > 007-for.bas 1`] = `
{
  "exitCode": 0,
  "stderr": "",
  "stdout": "1
2
3
4
5
6
7
8
9
10
",
}
`;

exports[`examples > 008-while.bas 1`] = `
{
  "exitCode": 0,
  "stderr": "",
  "stdout": "loop
",
}
`;

exports[`examples > 009-repeat.bas 1`] = `
{
  "exitCode": 0,
  "stderr": "",
  "stdout": "loop
",
}
`;

exports[`examples > 010-functions.bas 1`] = `
{
  "exitCode": 70,
  "stderr": "RuntimeError: Expected 0 arguments, received 2
",
  "stdout": "",
}
`;
